algunas mejoras visuales

--- a/src/app/contenido/contenido.component.html
+++ b/src/app/contenido/contenido.component.html
@@ -31,7 +31,7 @@
 
         <div class="grilla1">
             <div class="clima">
-                <img src="https://static.apksmods.com/images/en/com.graph.weather.forecast.channel/icon.png" alt="" height="250px">
+                <img src="https://static.apksmods.com/images/en/com.graph.weather.forecast.channel/icon.png" alt="" height="250px" width="480px">
             </div>
             <div class="conteos">
                 <img src="https://www.fao.org/3/y4137s/y4137s0a.jpg" alt="" height="250px">
