--- a/src/app/horizontal/horizontal.component.html
+++ b/src/app/horizontal/horizontal.component.html
@@ -1,6 +1,6 @@
 <nav>
     <div class="horizontal">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Logo_of_YouTube_%282015-2017%29.svg" alt="">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Logo_of_YouTube_%282015-2017%29.svg" alt="" height="35px">
     </div>
     <select name="=">
         <option name="Elements">=</option>
@@ -11,10 +11,13 @@
             <i class="fa fa-search"></i>
         </div>
     </div>
-    <div class="imagen">
-        <img src="https://cdn.pixabay.com/photo/2020/07/01/12/58/icon-5359553_960_720.png" alt="">
+    <div class="esquina">
+        <div class="imagen">
+            <img src="https://cdn.pixabay.com/photo/2020/07/01/12/58/icon-5359553_960_720.png" alt="" width= "45px" height= "45px">
+        </div>
+        <div>
+            <button>...</button>
+        </div>
     </div>
-    <div>
-        <button>...</button>
-    </div>
+    
 <nav>
